--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,7 +14,7 @@
         android:rotation="0"
         android:rotationX="0"
         android:rotationY="0"
-        android:text="Sharecycle"
+        android:text="ShareCycle"
         android:textSize="32sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
