--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
-    <color name="black">#FF000000</color>
+<resources xmlns:tools="http://schemas.android.com/tools">
+    <color name="black">#FF323232</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="pressedColor">#2196F3</color>
+    <color name="focusedColor">#03A9F4</color>
+    <color name="accentLight">#00ddbb</color>
+    <color name="accentDark" tools:ignore="DuplicateDefinition">#00cccc</color>
+    <color name="heading">#00cacc</color>
+    <color name="defaultColor">#00BCD4</color>
+    <color name="buttonBackground">#00bbcc</color>
 </resources>
