--- a/app/src/main/res/layout/activity_create_basket.xml
+++ b/app/src/main/res/layout/activity_create_basket.xml
@@ -48,19 +48,25 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-        android:layout_width="200dp"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:background="#00000000"
         android:hint="Select Resource"
         android:textColorHint="@color/white"
         app:boxStrokeColor="@color/accentDark"
+        app:counterTextColor="@color/white"
         app:endIconTint="@color/black"
+        app:helperTextTextColor="@color/white"
         app:hintTextColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:startIconTint="@color/black">
+        app:passwordToggleTint="@color/white"
+        app:placeholderTextColor="@color/white"
+        app:prefixTextColor="@color/white"
+        app:startIconTint="@color/black"
+        app:suffixTextColor="@color/white">
 
         <AutoCompleteTextView
             android:id="@+id/auto_complete_txt"
@@ -85,9 +91,11 @@
 
     <ListView
         android:id="@+id/list_view"
+        app:cornerRadius="50dp"
         android:layout_width="match_parent"
+        android:layout_margin="5dp"
         android:layout_height="0dp"
-        android:background="#b3ffffff"
+        android:background="@drawable/rounded_outline"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/divider3"
         app:layout_constraintEnd_toEndOf="parent"
