--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -65,7 +65,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <EditText
-        android:id="@+id/editTextUsername"
+        android:id="@+id/editTextSearchUser"
         android:layout_width="360dp"
         android:layout_height="30dp"
         android:background="@drawable/rounded_outline"
@@ -100,7 +100,7 @@
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextSearchUser" />
 
     <Button
         android:id="@+id/back_button"
