--- a/app/src/main/res/layout/activity_search_pages.xml
+++ b/app/src/main/res/layout/activity_search_pages.xml
@@ -72,11 +72,14 @@
 
     <ListView
         android:id="@+id/list_view"
-        android:layout_width="409dp"
-        android:layout_height="600dp"
-        android:layout_marginStart="8dp"
+        android:layout_width="400dp"
+        android:layout_height="0dp"
+        android:layout_margin="15dp"
+        android:layout_marginLeft="15dp"
+        android:background="@drawable/rounded_outline"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/divider2"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.084" />
 </androidx.constraintlayout.widget.ConstraintLayout>
