--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -79,7 +79,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <EditText
-        android:id="@+id/editTextUsername"
+        android:id="@+id/editTextSearchUser"
         android:layout_width="360dp"
         android:layout_height="30dp"
         android:layout_marginTop="8dp"
@@ -136,7 +136,7 @@
         android:textStyle="normal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextSearchUser" />
 
     <EditText
         android:id="@+id/editTextRetypePassword"
