--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -9,7 +9,7 @@
 
     <ListView
         android:id="@+id/list_view"
-        android:layout_width="400dp"
+        android:layout_width="375dp"
         android:layout_height="0dp"
         android:layout_margin="15dp"
         android:background="@drawable/rounded_outline"
@@ -47,7 +47,7 @@
         android:layout_marginTop="8dp"
         android:background="@color/buttonBackground"
         android:gravity="center"
-        android:onClick="postPage"
+        android:onClick="showContribute"
         android:text="Contribute"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
@@ -58,22 +58,46 @@
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/next_button"
+        android:id="@+id/username"
         style="@style/Widget.AppCompat.Button.Small"
-        android:layout_width="120dp"
+        android:layout_width="110dp"
         android:layout_height="40dp"
-
         android:layout_margin="10dp"
+        android:layout_marginTop="4dp"
 
         android:background="@color/buttonBackground"
+
+        android:drawableLeft="@drawable/baseline_person_24"
         android:gravity="center"
-        android:onClick="postPage"
+        android:onClick="showAccountPage"
+        android:paddingLeft="10dp"
+        android:paddingRight="5dp"
         android:text="Username"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
-        android:textSize="18dp"
+        android:textSize="15dp"
         android:textStyle="normal"
         app:cornerRadius="20sp"
+        app:layout_constraintEnd_toStartOf="@+id/notification_button"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/notification_button"
+        style="@style/Widget.AppCompat.Button.Small"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_margin="10dp"
+        android:background="#00000000"
+        android:drawableLeft="@drawable/baseline_notifications_24"
+        android:gravity="center"
+        android:onClick="showLogin"
+        android:text=""
+        android:textAllCaps="false"
+        android:textColor="#FFFFFF"
+        android:textSize="25dp"
+        android:textStyle="normal"
+        app:cornerRadius="10sp"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -106,7 +130,7 @@
         android:autoSizeMinTextSize="12sp"
         android:autoSizeTextType="uniform"
         android:gravity="left|center_vertical"
-        android:paddingLeft="5dp"
+        android:paddingLeft="10dp"
         android:rotation="0"
         android:rotationX="0"
         android:rotationY="0"
