--- a/app/src/main/res/layout/activity_view_donation_page.xml
+++ b/app/src/main/res/layout/activity_view_donation_page.xml
@@ -7,6 +7,29 @@
     android:background="@drawable/background_gradient"
     tools:context=".ViewDonationPageActivity">
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/username"
+        style="@style/Widget.AppCompat.Button.Small"
+        android:layout_width="110dp"
+        android:layout_height="40dp"
+        android:layout_margin="10dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+
+        android:background="@color/buttonBackground"
+        android:gravity="center"
+        android:onClick="showAccountPage"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:text="Username"
+        android:textAllCaps="false"
+        android:textColor="#FFFFFF"
+        android:textSize="15dp"
+        android:textStyle="normal"
+        app:cornerRadius="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Button
         android:id="@+id/back_button"
         android:layout_width="30dp"
@@ -16,6 +39,7 @@
         android:backgroundTint="#00323232"
         android:drawableLeft="@drawable/baseline_arrow_back_ios_new_24"
         android:gravity="left|center_vertical"
+        android:onClick="showSearchPages"
         android:paddingLeft="1dp"
         android:textAllCaps="false"
         android:textColor="@color/white"
@@ -24,7 +48,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/next_button"
+        android:id="@+id/contribute_button"
         style="@style/Widget.AppCompat.Button.Small"
         android:layout_width="356dp"
         android:layout_height="50dp"
@@ -50,7 +74,7 @@
         android:layout_height="1dp"
         android:layout_marginBottom="16dp"
         android:background="?android:attr/listDivider"
-        app:layout_constraintBottom_toTopOf="@+id/next_button" />
+        app:layout_constraintBottom_toTopOf="@+id/contribute_button" />
 
     <View
         android:id="@+id/divider2"
@@ -86,4 +110,5 @@
                 android:layout_height="match_parent"></ListView>
         </LinearLayout>
     </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
