--- a/app/src/main/res/layout/user_list_row.xml
+++ b/app/src/main/res/layout/user_list_row.xml
@@ -9,30 +9,30 @@
 
     <TextView
         android:id="@+id/txt_number"
-        android:layout_marginLeft="5sp"
-        android:textSize="18dp"
-        android:textColor="#ff888888"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="NN" />
+        android:layout_marginLeft="5sp"
+        android:text="NN"
+        android:textColor="#ff888888"
+        android:textSize="22dp" />
 
     <TextView
         android:id="@+id/txt_name"
-        android:textSize="18dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="30sp"
+        android:layout_marginLeft="9dp"
         android:layout_toRightOf="@id/txt_number"
-        android:text="TTTTTTTTTTTTTTTTTTT" />
+        android:text="TTTTTTTTTTTTTTTTTTT"
+        android:textSize="22dp" />
 
     <TextView
         android:id="@+id/txt_rank"
-        android:textSize="18dp"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="10dp"
-        android:textColor="#ffababab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="0dp"
+        android:text="TextView"
+        android:textColor="#ffababab"
+        android:textSize="22dp" />
 
 </RelativeLayout>
