--- a/app/src/main/res/layout/activity_account_page.xml
+++ b/app/src/main/res/layout/activity_account_page.xml
@@ -23,8 +23,8 @@
         android:id="@+id/txt_username"
         android:layout_width="116dp"
         android:layout_height="41dp"
-        android:gravity="center_vertical"
         android:background="#00000000"
+        android:gravity="center_vertical"
         android:paddingLeft="5dp"
         android:text="Username"
         android:textColor="@color/white"
@@ -36,16 +36,14 @@
         android:layout_width="200dp"
         android:layout_height="90dp"
         android:layout_marginTop="24dp"
-        android:layout_marginBottom="90dp"
+        android:background="#00000000"
         android:gravity="center_vertical"
         android:paddingLeft="5dp"
         android:text="Biography"
-        android:background="#00000000"
         android:textColor="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/textView11"
+        app:layout_constraintBottom_toTopOf="@+id/divider4"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_username"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_username" />
 
     <Button
         android:id="@+id/back_button"
@@ -105,12 +103,13 @@
         android:id="@+id/textView11"
         android:layout_width="119dp"
         android:layout_height="33dp"
+        android:layout_marginBottom="10dp"
         android:gravity="center"
         android:text="History"
         android:textColor="@color/white"
         android:textSize="18dp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/divider4"
+        app:layout_constraintBottom_toTopOf="@+id/listView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -118,50 +117,50 @@
         android:id="@+id/listView"
         android:layout_width="365dp"
         android:layout_height="350dp"
-        android:layout_marginBottom="84dp"
-        android:background="@drawable/rounded_outline"
+        android:layout_marginBottom="94dp"
 
+        android:background="@drawable/rounded_outline"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.347"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/divider4"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/logout_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="#4896B5"
-        android:text="Logout"
         android:onClick="logout"
+        android:text="Logout"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.929"
+        app:layout_constraintHorizontal_bias="0.927"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/listView"
-        app:layout_constraintVertical_bias="0.277" />
+        app:layout_constraintVertical_bias="0.478" />
 
     <Button
         android:id="@+id/report_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="22dp"
         android:layout_marginBottom="24dp"
         android:backgroundTint="#4896B5"
         android:text="Report"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/logout_button"
         app:layout_constraintHorizontal_bias="0.125"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/listView" />
 
     <View
         android:id="@+id/divider4"
         android:layout_width="409dp"
         android:layout_height="1dp"
         android:background="?android:attr/listDivider"
+        app:layout_constraintBottom_toTopOf="@+id/textView11"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="287dp" />
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <View
         android:id="@+id/divider6"
