--- a/app/src/main/res/layout/contribution_history_item.xml
+++ b/app/src/main/res/layout/contribution_history_item.xml
@@ -3,37 +3,37 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:gravity="center_vertical"
+    android:layout_height="match_parent"
     android:layout_gravity="center_vertical"
-    android:layout_height="match_parent">
+    android:gravity="center_vertical">
 
     <TextView
         android:id="@+id/txt_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5sp"
+        android:layout_marginLeft="10sp"
         android:text="NN"
         android:textColor="#ff888888"
-        android:textSize="22dp" />
-
+        android:textSize="18dp" />
     <TextView
         android:id="@+id/txt_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="9dp"
+        android:layout_marginLeft="30sp"
         android:layout_toRightOf="@id/txt_number"
-        android:layout_marginBottom="30dp"
-        android:text="TTTTTTTTTTTTTTTTTTT"
-        android:textSize="22dp" />
+        android:text="TTTTTTTTTTTTTTTTTTTTTTTTTTTTTTT"
+        android:textSize="18dp" />
+
 
     <TextView
-        android:id="@+id/txt_rank"
+        android:id="@+id/txt_items"
         android:layout_width="wrap_content"
+        android:layout_marginLeft="30sp"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="5dp"
-        android:text="TextView"
-        android:textColor="#ffababab"
-        android:textSize="22dp" />
+        android:text="ASVASAWFWAFQWFWFQW"
+        android:layout_marginBottom="10dp"
+        android:layout_below="@id/txt_name"
+        android:textSize="14dp"
 
+        ></TextView>
 </RelativeLayout>
