--- a/app/src/main/res/layout/page_list_row.xml
+++ b/app/src/main/res/layout/page_list_row.xml
@@ -22,6 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="30sp"
+        android:layout_marginBottom="30dp"
         android:layout_toRightOf="@id/txt_number"
         android:text="TTTTTTTTTTTTTTTTTTT" />
 
