--- a/app/src/main/res/layout/activity_account_page.xml
+++ b/app/src/main/res/layout/activity_account_page.xml
@@ -23,11 +23,14 @@
         android:id="@+id/txt_username"
         android:layout_width="116dp"
         android:layout_height="41dp"
-        android:background="#00000000"
-        android:gravity="center_vertical"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/rounded_outline"
+        android:gravity="top|left"
+        android:paddingStart="8dp"
         android:paddingLeft="5dp"
         android:text="Username"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/divider6" />
 
@@ -35,12 +38,15 @@
         android:id="@+id/txt_biography"
         android:layout_width="200dp"
         android:layout_height="90dp"
+        android:layout_marginLeft="5dp"
         android:layout_marginTop="24dp"
-        android:background="#00000000"
-        android:gravity="center_vertical"
+        android:layout_marginBottom="24dp"
+        android:background="@drawable/rounded_outline"
+        android:gravity="top|left"
+        android:paddingStart="8dp"
         android:paddingLeft="5dp"
         android:text="Biography"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/divider4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_username" />
@@ -103,7 +109,6 @@
         android:id="@+id/textView11"
         android:layout_width="119dp"
         android:layout_height="33dp"
-        android:layout_marginBottom="10dp"
         android:gravity="center"
         android:text="History"
         android:textColor="@color/white"
@@ -114,15 +119,16 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <ListView
+        android:paddingTop="5dp"
         android:id="@+id/listView"
         android:layout_width="365dp"
         android:layout_height="350dp"
-        android:layout_marginBottom="94dp"
 
+        android:layout_marginTop="48dp"
         android:background="@drawable/rounded_outline"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/divider4" />
 
     <Button
         android:id="@+id/logout_button"
@@ -156,11 +162,10 @@
         android:id="@+id/divider4"
         android:layout_width="409dp"
         android:layout_height="1dp"
+        android:layout_marginTop="256dp"
         android:background="?android:attr/listDivider"
-        app:layout_constraintBottom_toTopOf="@+id/textView11"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="1dp" />
 
     <View
         android:id="@+id/divider6"
