--- a/app/src/main/res/layout/activity_create_basket.xml
+++ b/app/src/main/res/layout/activity_create_basket.xml
@@ -91,6 +91,7 @@
 
     <ListView
         android:id="@+id/list_view"
+        android:paddingTop="8dp"
         app:cornerRadius="50dp"
         android:layout_width="match_parent"
         android:layout_margin="5dp"
