--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -40,18 +40,19 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/contribute_button"
         style="@style/Widget.AppCompat.Button.Small"
-        android:layout_width="180dp"
+        android:layout_width="140dp"
         android:layout_height="50dp"
         android:layout_margin="15dp"
 
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="12dp"
         android:background="@color/buttonBackground"
         android:gravity="center"
         android:onClick="showContribute"
         android:text="Contribute"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
-        android:textSize="25dp"
+        android:textSize="22dp"
         android:textStyle="normal"
         app:cornerRadius="10sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -90,7 +91,6 @@
         android:background="#00000000"
         android:drawableLeft="@drawable/baseline_notifications_24"
         android:gravity="center"
-        android:onClick="showLogin"
         android:text=""
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
@@ -104,7 +104,7 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/create_page_button"
         style="@style/Widget.AppCompat.Button.Small"
-        android:layout_width="180dp"
+        android:layout_width="140dp"
         android:layout_height="50dp"
 
         android:layout_margin="15dp"
@@ -115,7 +115,7 @@
         android:text="Create Page"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
-        android:textSize="25dp"
+        android:textSize="22dp"
         android:textStyle="normal"
         app:cornerRadius="10sp"
         app:layout_constraintEnd_toEndOf="parent"
