--- a/app/src/main/res/layout/activity_view_donation_page.xml
+++ b/app/src/main/res/layout/activity_view_donation_page.xml
@@ -86,29 +86,25 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/back_button" />
 
-    <ScrollView
-        android:id="@+id/scrollView"
-        android:layout_width="409dp"
-        android:layout_height="589dp"
-        app:layout_constraintBottom_toBottomOf="@+id/divider3"
-        android:background="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/divider2">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="564dp"
+        app:layout_constraintStart_toEndOf="@id/divider2"
+        app:layout_constraintBottom_toTopOf="@id/divider3"
+        android:orientation="vertical">
 
-        <LinearLayout
+        <WebView
+            android:id="@+id/webView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-            <WebView
-                android:id="@+id/webView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"></WebView>
-            <ListView
-                android:id="@+id/listView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"></ListView>
-        </LinearLayout>
-    </ScrollView>
+            android:layout_weight="1"
+            android:layout_height="0dp"></WebView>
+
+        <ListView
+            android:id="@+id/listView"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"></ListView>
+    </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
